--- a/goodnight.css
+++ b/goodnight.css
@@ -12,7 +12,7 @@
     min-height: 100vh;
     width: 100%;
     background-color: #221010;
-    background-image: url(https://cdn.dribbble.com/userupload/29065988/file/original-2667b60d077d14d897d0d3cf2e41162f.gif);
+    background-image: url("oyasumi.gif");
     background-position: center;
     background-repeat: no-repeat ;
     background-size: 100%;
